--- a/template.html
+++ b/template.html
@@ -15,10 +15,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+<!-- <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Homemade+Apple&family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
+    
 </head>
 
 <body class="bg-[#fafcfdf2] text-[#607b84]">
-    <header class="w-full h-16 border-b-gray-200 border-1 sticky top-0 bg-[#fafcfd]">
+    <header class="w-full h-16 border-b-gray-200 border-1 z-10 sticky top-0 bg-[#fafcfd]">
         <nav class="w-full h-full my-container flex justify-between items-center ">
             <a href="#" class="font-serif text-xl text-[#2c3e44]">Modern Musician</a>
             <ul class="md:flex gap-8 text-sm hidden">
@@ -44,15 +48,15 @@
         </div>
     </header>
     <div class="my-container w-full mt-10 flex flex-col gap-4 justify-between md:flex-row hero mb-23">
-        <div class="md:w-[45%]  w-full md:text-start text-center">
+        <div class="md:w-[50%]  w-full md:text-start text-center">
             <p>Free HTML CSS Template</p>
-            <h1 class="xl:text-6xl lg:text-4xl text-3xl font-serif my-4 text-[#2c3e44]">Welcome to Modern Musician</h1>
+            <h1 class="xl:text-6xl lg:text-4xl text-3xl font-serif my-4 leading-18 text-[#2c3e44]">Welcome to Modern Musician</h1>
             <p class="md:leading-8 ">A free HTML CSS template for music creators, educators, and artists. Showcase your
                 work, share your
                 sound, and connect with your audience worldwide.</p>
             <div
                 class="music w-9/10 mt-10 py-4 px-8 bg-[#ffffff] border-gray-200 border-1 flex items-center gap-2 rounded-lg">
-                <div class="play w-[44px] h-[44px] rounded-full bg-[#607b84] flex justify-center items-center cursor-pointer">
+                <div class="play w-[44px] h-[44px] rounded-full bg-[#607b84] flex justify-center items-center cursor-pointer hover:bg-[#4d6168] ">
                     <i class="icon fa-solid fa-play" style="color: white;"></i>
                 </div>
                 <div class="w-[86%]">
@@ -61,20 +65,22 @@
                             <p class="text-[#2c3e44] md:text-sm text-xs font-bold">Sample Track</p>
                             <p class="md:text-sm text-xs">Demo Audio</p>
                         </div>
-                        <div class="volume flex gap-1">
+                        <div class="max-[350px]:hidden volume flex gap-1">
                             <i class="fa-solid fa-volume-high"></i>
-                            <div class="seek w-[50px] h-1 mt-1.5 bg-[#e0e5e7]">
-                                <div class="w-3 h-3 bg-[#607b84] rounded-full relative bottom-1 border-2 border-white ">
+                            <div id="volume-track" class="seek cursor-pointer w-[50px] h-1 mt-1.5 bg-[#e0e5e7]">
+                                <div id="volume-progress" class="h-full bg-[#607b84]"></div>
+                                <div id="volume-move" class="w-3 h-3 bg-[#607b84] rounded-full relative bottom-2 border-2 border-white ">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="seek w-full h-1.5 mt-1.5 bg-[#e0e5e7]">
-                        <div class="w-4 h-4 bg-[#607b84] rounded-full relative bottom-1 border-2 border-white "></div>
+                    <div id="seek-track" class="seek hover:cursor-pointer w-full h-1.5 mt-1.5 bg-[#e0e5e7]">
+                        <div id="progress" class="h-full bg-[#607b84] w-0"></div>
+                        <div id="seek-move" class="w-4 h-4 bg-[#607b84] rounded-full relative bottom-[10px] border-2 border-white "></div>
                     </div>
-                    <div class="time flex justify-between text-[12px] pl-3 mt-1">
-                        <span>0:00</span>
-                        <span>0:00</span>
+                    <div class="time flex justify-between text-[12px] pl-2 mt-1">
+                        <span id="current-duration">00:00</span>
+                        <span id="music-duration">00:00</span>
                     </div>
 
                 </div>
@@ -91,18 +97,18 @@
         </div>
 
         <div class="md:w-[45%] w-full flex flex-col items-center ">
-            <img class="w-85 rounded-2xl shadow-2xl" src="./images/music.png" alt="">
-            <div class="h-10 w-[35%] border flex gap-1 border-gray-200 bg-white mt-8 justify-center rounded-lg">
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
+            <img class="w-85 rounded-2xl shadow-2xl contrast-80" src="./images/music.png" alt="">
+            <div class="h-10 w-[35%] z-0  border flex gap-1 border-gray-200 bg-white mt-8 justify-center rounded-lg">
+                <div class="wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class="wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class=" wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class=" wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class=" wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class=" wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class=" wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class=" wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class=" wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
+                <div class=" wave-div mt-1 w-1 h-2 bg-gray-500 -z-10"></div>
                
             </div>
             <div
@@ -297,7 +303,7 @@
         <div class="my-container py-25 md:flex-row flex-col gap-4 flex justify-between">
             <div class="md:w-[30%] w-full">
                 <h6 class="text-sm font-bold ">GET IN TOUCH</h6>
-                <h1 class="text-3xl mt-2 text-[#2c3e44] font-serif mb-4">Let's work together</h1>
+                <h1 class="text-3xl md:text-4xl mt-2 text-[#2c3e44] font-serif mb-4">Let's work together</h1>
                 <p class="text-md leading-6 mb-4">Have a project in mind? Send me a message and I'll get back to you
                     soon.</p>
                 <div class="links w-full flex gap-3">
@@ -326,13 +332,13 @@
             </div>
             <form class="form md:w-[60%] w-full">
                 <input
-                    class="w-[45%] py-2 px-4 mr-2 bg-white text-sm text-black rounded-sm focus:border focus:border-gray-900 outline-none"
+                    class="md:w-[45%] w-full py-2 px-4 mr-2 mb-2 bg-white text-sm text-black rounded-sm focus:border focus:border-gray-900 outline-none"
                     type="text" id="name" name="name" placeholder="Your name">
                 <input
-                    class="w-[45%] py-2 px-4 bg-white mb-3 text-sm text-black rounded-sm focus:border focus:border-gray-900 outline-none"
+                    class="md:w-[45%] w-full py-2 px-4 bg-white mb-3 text-sm text-black rounded-sm focus:border focus:border-gray-900 outline-none"
                     type="email" id="email" name="email" placeholder="Your email">
                 <textarea
-                    class="w-[calc(90%+12px)] py-2 px-4 bg-white text-sm text-black rounded-sm mb-5 focus:border focus:border-gray-900 outline-none"
+                    class="md:w-[calc(90%+12px)] w-full py-2 px-4 bg-white text-sm text-black rounded-sm mb-5 focus:border focus:border-gray-900 outline-none"
                     type="text" id="message" name="message" placeholder="your message" rows="5"></textarea>
                 <button type="submit" class="primary-button py-3">Send Message</button>
 
@@ -343,18 +349,14 @@
     </section>
     <section class="map bg-[#fafcfd] w-full">
         <div class="my-container py-25 md:flex-row flex-col flex justify-between">
-            <!-- <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21123.092813692474!2d72.58421248658044!3d23.119902572420155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e83002d1e49ab%3A0x3bfdecadee611b4c!2sSparrk%20%7C%20Premier%20Game%20Zone!5e1!3m2!1sen!2sin!4v1769265471971!5m2!1sen!2sin"
-                class="rounded-lg md:w-[320px] w-full mb-4" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe> -->
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d117412.75696784044!2d72.594456!3d23.128241!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e83002d1e49ab%3A0x3bfdecadee611b4c!2sSparrk%20%7C%20Premier%20Game%20Zone!5e0!3m2!1sen!2sin!4v1769500560499!5m2!1sen!2sin"
-                class="rounded-lg md:w-[320px] w-full mb-4" allowfullscreen="" loading="lazy"
+                class="rounded-lg md:w-[320px] w-full mb-4" allowfullscreen="" 
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="md:w-[50%] w-full flex flex-col items-center">
                 <p class="text-sm font-bold">STAY CONNECTED</p>
-                <h1 class="text-4xl mt-2 text-[#2c3e44] font-serif mb-4">Join the creative journey</h1>
-                <p class="text-sm mb-6">Get updates on new releases, tutorials, and exclusive content. No spam.</p>
+                <h1 class="md:text-4xl text-2xl mt-2 text-[#2c3e44] font-serif mb-4">Join the creative journey</h1>
+                <p class="text-sm mb-6 text-start">Get updates on new releases, tutorials, and exclusive content. No spam.</p>
                 <div class="w-full getemail text-center">
                     <input
                         class="py-3 px-4 bg-white mb-3 md:w-[50%] w-full text-sm text-black rounded-sm focus:border focus:border-gray-900 outline-none border border-gray-200 mr-4"
